	PR c/47473 	* c-lex.c (interpret_float): If CPP_N_IMAGINARY, ensure 	EXCESS_PRECISION_EXPR is created with COMPLEX_TYPE instead of 	REAL_TYPE.

* gcc.dg/torture/pr47473.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169299 138bc75d-0d04-0410-961f-82ee72b054a4